protocols/tests/adders/adder_d1/add_incorrect.out
error: Thread 0 attempted conflicting assignment to 'a': current=4, new=1
   ┌─ adders/adder_d1/add_d1.prot:47:3
   │
47 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 attempted conflicting assignment to 'a': current=4, new=1

error: Thread 1 attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d1/add_d1.prot:44:3
   │
44 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 attempted conflicting assignment to 'a': current=1, new=4

